canary/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: canary
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: nginx
